fixed animation jumping

--- a/css/about.css
+++ b/css/about.css
@@ -24,19 +24,19 @@
 
 .question{
   width: 80%;
-  margin-left: 1%;
-  margin-bottom: 2.5%;
-  height: 15%;
-  padding: 5%;
-  padding-top: 10%;
-  margin-top: 2.5%;
-  border-radius: 1rem;
-  border-style: ridge;
-  border-width: 1rem;
-  border-color: rgba(85, 122, 149, 0.8);
-  background-color: rgba(115, 149, 174, 0.8);
-  display: flex;
-  flex-direction: column;
+      margin-left: 1%;
+      margin-bottom: 2.5%;
+      height: 18%;
+      padding: 5%;
+      padding-top: 5%;
+      margin-top: 2.5%;
+      border-radius: 1rem;
+      border-style: ridge;
+      border-width: 1rem;
+      border-color: rgba(85, 122, 149, 0.8);
+      background-color: rgba(115, 149, 174, 0.8);
+      display: flex;
+      flex-direction: column;
 }
 
 .questionText{
