--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ body {
     opacity: 1;
   }
   100% {
-    margin-top: -68.5%;
+    margin-top: -67.5%;
     opacity: 0;
   }
 }
